Incorporate new platform config object definition. Fill in most of the config service.
