# src/lockss/pyclient/config/models/platform_configuration_ws_result_daemon_version.py
@@ -1,0 +1,188 @@
+# coding: utf-8
+
+"""
+    LOCKSS Configuration Service REST API
+
+    REST API of the LOCKSS Configuration Service  # noqa: E501
+
+    OpenAPI spec version: 2.0.0
+    Contact: lockss-support@lockss.org
+    Generated by: https://github.com/swagger-api/swagger-codegen.git
+"""
+
+import pprint
+import re  # noqa: F401
+
+import six
+
+class PlatformConfigurationWsResultDaemonVersion(object):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    """
+    Attributes:
+      swagger_types (dict): The key is attribute name
+                            and the value is attribute type.
+      attribute_map (dict): The key is attribute name
+                            and the value is json key in definition.
+    """
+    swagger_types = {
+        'full_version': 'str',
+        'major_version': 'int',
+        'minor_version': 'int',
+        'build_version': 'int'
+    }
+
+    attribute_map = {
+        'full_version': 'fullVersion',
+        'major_version': 'majorVersion',
+        'minor_version': 'minorVersion',
+        'build_version': 'buildVersion'
+    }
+
+    def __init__(self, full_version=None, major_version=None, minor_version=None, build_version=None):  # noqa: E501
+        """PlatformConfigurationWsResultDaemonVersion - a model defined in Swagger"""  # noqa: E501
+        self._full_version = None
+        self._major_version = None
+        self._minor_version = None
+        self._build_version = None
+        self.discriminator = None
+        if full_version is not None:
+            self.full_version = full_version
+        if major_version is not None:
+            self.major_version = major_version
+        if minor_version is not None:
+            self.minor_version = minor_version
+        if build_version is not None:
+            self.build_version = build_version
+
+    @property
+    def full_version(self):
+        """Gets the full_version of this PlatformConfigurationWsResultDaemonVersion.  # noqa: E501
+
+
+        :return: The full_version of this PlatformConfigurationWsResultDaemonVersion.  # noqa: E501
+        :rtype: str
+        """
+        return self._full_version
+
+    @full_version.setter
+    def full_version(self, full_version):
+        """Sets the full_version of this PlatformConfigurationWsResultDaemonVersion.
+
+
+        :param full_version: The full_version of this PlatformConfigurationWsResultDaemonVersion.  # noqa: E501
+        :type: str
+        """
+
+        self._full_version = full_version
+
+    @property
+    def major_version(self):
+        """Gets the major_version of this PlatformConfigurationWsResultDaemonVersion.  # noqa: E501
+
+
+        :return: The major_version of this PlatformConfigurationWsResultDaemonVersion.  # noqa: E501
+        :rtype: int
+        """
+        return self._major_version
+
+    @major_version.setter
+    def major_version(self, major_version):
+        """Sets the major_version of this PlatformConfigurationWsResultDaemonVersion.
+
+
+        :param major_version: The major_version of this PlatformConfigurationWsResultDaemonVersion.  # noqa: E501
+        :type: int
+        """
+
+        self._major_version = major_version
+
+    @property
+    def minor_version(self):
+        """Gets the minor_version of this PlatformConfigurationWsResultDaemonVersion.  # noqa: E501
+
+
+        :return: The minor_version of this PlatformConfigurationWsResultDaemonVersion.  # noqa: E501
+        :rtype: int
+        """
+        return self._minor_version
+
+    @minor_version.setter
+    def minor_version(self, minor_version):
+        """Sets the minor_version of this PlatformConfigurationWsResultDaemonVersion.
+
+
+        :param minor_version: The minor_version of this PlatformConfigurationWsResultDaemonVersion.  # noqa: E501
+        :type: int
+        """
+
+        self._minor_version = minor_version
+
+    @property
+    def build_version(self):
+        """Gets the build_version of this PlatformConfigurationWsResultDaemonVersion.  # noqa: E501
+
+
+        :return: The build_version of this PlatformConfigurationWsResultDaemonVersion.  # noqa: E501
+        :rtype: int
+        """
+        return self._build_version
+
+    @build_version.setter
+    def build_version(self, build_version):
+        """Sets the build_version of this PlatformConfigurationWsResultDaemonVersion.
+
+
+        :param build_version: The build_version of this PlatformConfigurationWsResultDaemonVersion.  # noqa: E501
+        :type: int
+        """
+
+        self._build_version = build_version
+
+    def to_dict(self):
+        """Returns the model properties as a dict"""
+        result = {}
+
+        for attr, _ in six.iteritems(self.swagger_types):
+            value = getattr(self, attr)
+            if isinstance(value, list):
+                result[attr] = list(map(
+                    lambda x: x.to_dict() if hasattr(x, "to_dict") else x,
+                    value
+                ))
+            elif hasattr(value, "to_dict"):
+                result[attr] = value.to_dict()
+            elif isinstance(value, dict):
+                result[attr] = dict(map(
+                    lambda item: (item[0], item[1].to_dict())
+                    if hasattr(item[1], "to_dict") else item,
+                    value.items()
+                ))
+            else:
+                result[attr] = value
+        if issubclass(PlatformConfigurationWsResultDaemonVersion, dict):
+            for key, value in self.items():
+                result[key] = value
+
+        return result
+
+    def to_str(self):
+        """Returns the string representation of the model"""
+        return pprint.pformat(self.to_dict())
+
+    def __repr__(self):
+        """For `print` and `pprint`"""
+        return self.to_str()
+
+    def __eq__(self, other):
+        """Returns true if both objects are equal"""
+        if not isinstance(other, PlatformConfigurationWsResultDaemonVersion):
+            return False
+
+        return self.__dict__ == other.__dict__
+
+    def __ne__(self, other):
+        """Returns true if both objects are not equal"""
+        return not self == other
